Change bp to px in order to work with xelatex

--- a/cv.tex
+++ b/cv.tex
@@ -124,7 +124,7 @@
         \end{figure}
 \end{flushleft}
 
-\vspace{10px}
+\vspace{10bp}
 \begin{questionbox}
     \textbf{Synthesis Questions:}
     \begin{enumerate}    
@@ -134,7 +134,7 @@
         \item What changes the values in the output feature map, padding or the values population a kernel?
         \item Why are there usually multiple convolutional and pooling layers in CNNs?
     \end{enumerate}
-    \vspace{1px}
+    \vspace{1bp}
 \end{questionbox}
 
 \section{Self-Supervised Learning}
@@ -156,7 +156,7 @@
     \large Self-supervised learning is critical in computer vision because it addresses the challenge of obtaining labeled datasets for image classification. Datasets for computer vision must be extensive and are typically manually labeled, making it much harder to generate the data needed for supervised learning in computer vision tasks. In many fields, such as medical imaging, autonomous driving, and wildlife monitoring, labeled data is scarce or difficult to acquire. Self-supervised learning addresses this issue directly by allowing models to learn directly from unstructured data without the need for extensive labeling. This approach not only reduces the reliance on human labor for labeling but also enhances the model's generalization capabilities across diverse tasks and datasets. Ultimately, self-supervised learning paves the way for more efficient and scalable computer vision solutions, enabling broader applications and improvements in areas like image classification, object detection, and scene analysis.
 \end{flushleft}
 
-\vspace{10px}
+\vspace{10bp}
 \begin{questionbox}
     \textbf{Synthesis Questions:}
     \begin{enumerate}    
@@ -164,7 +164,7 @@
         \item Can you think of any ways in which self-supervised learning is similar to human learning?
         \item What are some specific fields that would benefit from using self-supervised learning for computer vision?
     \end{enumerate}
-    \vspace{1px}
+    \vspace{1bp}
 \end{questionbox}
 
 \section{Image Segmentation}
@@ -189,14 +189,14 @@
     The simplest method of entity segmentation is \textbf{semantic segmentation}. This method assigns a semantic class to each pixel, but does not identify classes or differentiate between thing and stuff classes. Semantic segmentation focuses on drawing boundaries between objects but does not assign labels to them or identify different instances of the same object. Other more complex methods of segmentation are \textbf{instance segmentation} and \textbf{panoptic segmentation}. To learn more about segmentation, see \href{https://tinyurl.com/7kz8dkhu}{IBM Image Segmentation}.
 \end{flushleft}
 
-\vspace{10px}
+\vspace{10bp}
 \begin{questionbox}
     \textbf{Synthesis Questions:}
     \begin{enumerate}    
         \item How do superpixels enhance the efficiency of image segmentation algorithms?
         \item In what scenarios might an entity be classified as both a ``thing" and ``stuff" in image segmentation? How might this dual classification impact the effectiveness of semantic segmentation methods?
     \end{enumerate}
-    \vspace{1px}
+    \vspace{1bp}
 \end{questionbox}
 
 \section{When to Use Computer Vision}
