--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,7 @@
 \section*{The I2 Grimoire}
 We are Interactive Intelligence, an organization of interdisciplinary thinkers that seek to probe intelligence through the intersection of AI, neuroscience, and related fields. This book serves as a launchpad for the basic theory that underlies major AI systems and covers five large (intersecting) spheres: Machine Learning, Deep Learning, Computer Vision, Reinforcement Learning, and Language Modeling. While by no means a thorough overview of any one of these fields, this book serves as a starting point that will paint a large picture in your mind about the five aforementioned topics. This book is written in layman's english, and introduces some complex (but core) math while explaining as much intuition behind it as possible. Regardless of your background, there is something interesting you will learn in these pages. Feel free to explore sections that interest you, backtracking if you encounter unfamiliar concepts. \break
 
-This book is a culmination of many months of work by very talented students from the University of Washington. It was entirely created by I2 members, and we hope that you enjoy what we have written in these pages and leave better equipped to navigate this world we share with AI algorithms.
+This book is a culmination of many months of work by very talented students from the University of Washington. It was entirely created by I2 members, and we hope that you enjoy what we have written on these pages and leave better equipped to navigate this world we share with AI algorithms.
 
 \subsection*{Additional Information}
 This book was written to pair with the Interactive Intelligence intro to NeuroAI course, which lives here: \href{https://course.uw-i2.org/}{Interactive Intelligence Intro to NeuroAI Course Website}. There are questions associated with some sections, which serve as optional exercises for you to test your understanding. If you have questions or comments on the information in this book, please contact \href{mailto:varunananth1@gmail.com}{\texttt{varunananth1@gmail.com}} \\
