Change argmin and argmax

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,10 @@
 % Define colors (adjust the RGB values to your liking)
 \definecolor{neuripscolor}{rgb}{0,0,0}
 
+% argmin, argmax
+\DeclareMathOperator*{\argmin}{argmin}
+\DeclareMathOperator*{\argmax}{argmax}
+
 \begin{document}
 % Title Box
 \noindent\colorbox{neuripscolor}{
