--- a/unit_template.tex
+++ b/unit_template.tex
@@ -88,7 +88,7 @@
 \begingroup
 \centering
 \section*{The I2 Grimoire: {{UNIT}}}
-This is the {{UNIT}} unit of the I2 Grimoire book. Find the full book and other units on our GitHub: \url{https://github.com/interactive-intelligence/I2-grimoire/tree/PDF}.\break
+This is the {{UNIT}} unit of the I2 Grimoire book. Find the full book and other units on our website: \url{https://grimoire.uw-i2.org}.\break
 
 We are Interactive Intelligence, an organization of interdisciplinary thinkers that seek to probe intelligence through the intersection of AI, neuroscience, and related fields. This book serves as a launchpad for the basic theory that underlies major AI systems and covers five large (intersecting) spheres: Machine Learning, Deep Learning, Computer Vision, Reinforcement Learning, and Language Modeling. While by no means a thorough overview of any one of these fields, this book serves as a starting point that will paint a large picture in your mind about the five aforementioned topics. This book is written in layman's english, and introduces some complex (but core) math while explaining as much intuition behind it as possible. Regardless of your background, there is something interesting you will learn in these pages. Feel free to explore sections that interest you, backtracking if you encounter unfamiliar concepts. \break
 
