Add table of contents to units

--- a/unit_template.tex
+++ b/unit_template.tex
@@ -101,6 +101,8 @@ This book was written to pair with the Interactive Intelligence intro to NeuroAI
 \endgroup
 
 \newpage
+\tableofcontents
+\newpage
 
 \section*{{{UNIT}}}
 \include{{{unit}}}
