Center thank you page in units

--- a/unit_template.tex
+++ b/unit_template.tex
@@ -107,6 +107,7 @@ This book was written to pair with the Interactive Intelligence intro to NeuroAI
 \section*{{{UNIT}}}
 \include{{{unit}}}
 
+\centering
 \newpage
 \begingroup
 \section*{Thank You for Reading :)}
